should be able to handle when cms goes down
