# src/routes/content.route.ts
@@ -4,27 +4,6 @@ import { stringToBoolean } from "../utils/strings/stringToBool.js";
 
 const router = express.Router();
 
-router.get("/pages", async (req, res, next) => {
-  return new ContentController()
-    .allPages(stringToBoolean(req.query.editmode as string))
-    .then((response) => res.status(response.status).send(response.body))
-    .catch((error) => next(error));
-});
-
-router.get("/pages/start", async (req, res, next) => {
-  return new ContentController()
-    .allPagesAsTree(stringToBoolean(req.query.editmode as string))
-    .then((response) => res.status(response.status).send(response.body))
-    .catch((error) => next(error));
-});
-
-router.get("/pages/tree", async (req, res, next) => {
-  return new ContentController()
-    .allPagesAsTree(stringToBoolean(req.query.editmode as string))
-    .then((response) => res.status(response.status).send(response.body))
-    .catch((error) => next(error));
-});
-
 router.get("/sites", async (req, res, next) => {
   return new ContentController()
     .getWebsites()
@@ -52,9 +31,9 @@ router.get("/:id/children", async (req, res, next) => {
     .catch((error) => next(error));
 });
 
-router.get("/pages/:id", async (req, res, next) => {
+router.get("/pages/:id/tree", async (req, res, next) => {
   return new ContentController()
-    .getPage(
+    .getPageTree(
       Number(req.params.id),
       stringToBoolean(req.query.editmode as string)
     )
@@ -69,6 +48,16 @@ router.get("/pages/:id/children", async (req, res, next) => {
     stringToBoolean(req.query.editmode as string)
   );
   return res.send(response);
+});
+
+router.get("/pages/:id", async (req, res, next) => {
+  return new ContentController()
+    .getPage(
+      Number(req.params.id),
+      stringToBoolean(req.query.editmode as string)
+    )
+    .then((response) => res.status(response.status).send(response.body))
+    .catch((error) => next(error));
 });
 
 export { router as contentRouter };
